fixed tabing, fixed toggle label spacing

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -108,7 +108,6 @@ html{
 	width:80%; 
 	height: 100%;
 	float: right;
-
 }
 
 #rightSideWrapper > header > h2 {
@@ -165,15 +164,13 @@ canvas {
 	height: 23px;
   }
 
-/* Hide default HTML checkbox */
 .switch input {
 	opacity: 0;
 	width: 0;
 	height: 0;
-  }
+}
   
-  /* The slider */
-  .slider {
+.slider {
 	position: absolute;
 	cursor: pointer;
 	top: 0;
@@ -183,9 +180,9 @@ canvas {
 	background-color: #651a84;
 	-webkit-transition: .3s;
 	transition: .4s;
-  }
-  
-  .slider:before {
+}
+
+.slider:before {
 	position: absolute;
 	content: "";
 	height: 17px;
@@ -195,37 +192,37 @@ canvas {
 	background-color:#a51edb;
 	-webkit-transition: .4s;
 	transition: .4s;
-  }
+}
   
-  #tool-toggle:checked + .slider {
+#tool-toggle:checked + .slider {
 	background-color: #2196F3;
-  }
-  
-  #tool-toggle:focus + .slider {
+}
+
+#tool-toggle:focus + .slider {
 	box-shadow: 0 0 1px #2196F3;
-  }
-  
-  #tool-toggle:checked + .slider:before {
+}
+
+#tool-toggle:checked + .slider:before {
 	background: #1dd3d3;
 	-webkit-transform: translateX(15px);
 	-ms-transform: translateX(15px);
 	transform: translateX(15px);
-  }
-  .switch > p {
-	  text-align: center;
-	  font-size: 15px;
-	  position: relative;
-	  top: -95px;
-	  margin: 0px;
-  }
+}
+#toggleLabel {
+	text-align: center;
+	font-size: 15px;
+	position: relative;
+	top: -9px;
+	margin: 0px;
+}
   
-  .slider.round {
-	border-radius: 34px;
-  }
-  
-  .slider.round:before {
-	border-radius: 50%;
-  }
+.slider.round {
+border-radius: 34px;
+}
+
+.slider.round:before {
+border-radius: 50%;
+}
 
 #container{
 	left: 20%;
